<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:background="@drawable/bgblue"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<android.support.v7.widget.Toolbar android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@+id/toolbar" android:background="@color/DarkCyan" android:layout_width="fill_parent" android:layout_height="60.0dip" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
	<TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="25.0sp" android:typeface="serif" android:textStyle="bold" android:textColor="@color/Black" android:id="@+id/firstyear" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/firstyear" android:onClick="onClick" />
	<TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="25.0sp" android:typeface="serif" android:textStyle="bold" android:textColor="@color/Black" android:id="@+id/sem3" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sem3" android:onClick="onClick" />
	<TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="25.0sp" android:typeface="serif" android:textStyle="bold" android:textColor="@color/Black" android:id="@+id/sem4" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sem4" android:onClick="onClick" />
	<TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="25.0sp" android:typeface="serif" android:textStyle="bold" android:textColor="@color/Black" android:id="@+id/sem5" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sem5" android:onClick="onClick" />
	<TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="25.0sp" android:typeface="serif" android:textStyle="bold" android:textColor="@color/Black" android:id="@+id/sem6" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sem6" android:onClick="onClick" />
	<TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="25.0sp" android:typeface="serif" android:textStyle="bold" android:textColor="@color/Black" android:id="@+id/sem7" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sem7" android:onClick="onClick" />
	<TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="25.0sp" android:typeface="serif" android:textStyle="bold" android:textColor="@color/Black" android:id="@+id/sem8" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sem8" android:onClick="onClick" />
	<View android:background="@color/wallet_bright_foreground_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="60.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="60.0dip" />
	<TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="33.0sp" android:typeface="serif" android:textStyle="bold|italic" android:textColor="@color/Black" android:gravity="center_horizontal" android:id="@+id/pq" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pqp" android:onClick="onClick" />
	<View android:background="@color/wallet_bright_foreground_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="60.0dip" android:layout_marginRight="60.0dip" />
</LinearLayout>
